Displaying placeholder map

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,20 @@
+@import "https://js.arcgis.com/calcite-components/3.2.1/calcite.css";
+@import "https://js.arcgis.com/4.33/@arcgis/core/assets/esri/themes/light/main.css";
+@import "https://js.arcgis.com/4.33/map-components/main.css";
 @import "tailwindcss";
+
+
+#root,
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+/* 
+arcgis-map {
+  display: block;
+  height: 100vh;
+} */
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
