--- a/src/index.css
+++ b/src/index.css
@@ -29,58 +29,18 @@ arcgis-map {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  --calcite-button-background-color: #769A96;
+  --calcite-color-brand: #769A96;
+  --calcite-color-status-info: #769A96;
+  --calcite-ui-brand: #769A96;
+  --calcite-slider-track-fill-color: #769A96;
+  --calcite-slider-handle-extension-color: #769A96;
+  --calcite-slider-accent-color: #769A96;
+  --calcite-slider-tick-color: #769A96;
+  --calcite-slider-tick-selected-color: #769A96;
+  --calcite-slider-graph-color: #769A96;
+  --calcite-color-brand-press: #769A96;
+  --calcite-color-status-info:  #769A96;
+  --calcite-segmented-control-icon-color: red
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
