Updating favicon + text color

--- a/src/index.css
+++ b/src/index.css
@@ -39,4 +39,6 @@ arcgis-map {
   --calcite-slider-tick-color: #769A96;
   --calcite-slider-tick-selected-color: #769A96;
   --calcite-slider-graph-color: #769A96;
+
+  --calcite-color-text-1: #08201E;
 }
